# spottt

./: .gitignore  LICENSE  README.md  icon.icns  package.json  requirements.txt  run.py  setup.sh
spottt/: __init__.py  app.py  auth.py  renderer.py  rhythm.py  spotify.py  ui.py
spottt/desktop/: app.py  server.py  shell.html
src/: shell.html
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: auth.rs  commands.rs  lib.rs  main.rs  renderer.rs  spotify.rs  state.rs
